
	Emil Beinroth <emilbeinroth at gmx.net>:
	- Fixed a small bug regarding -o/-a and atoms with a pattern .. thanks to
	  leonie for bringing this to my attention.
	- Added PROVIDE; bumped db-version
	- Fixing http://bugs.gentoo.org/show_bug.cgi?id=111927
	- Added our own strndup-implementation that will be used for ppc-macos
	  See http://bugs.gentoo.org/show_bug.cgi?id=111912

*eix-0.5_beta

	Emil Beinroth <emilbeinroth at gmx.net>:
	- Formatstring(Conditions): If a "else" was missing, the if-true part was
	  linked to if-false.
	- Changed the arch-part of the dbheader from char[16] to string.
	- Fixed http://bugs.gentoo.org/show_bug.cgi?id=104083 - once again:
	  unsigned int vs. vector::size_type
	- Moved from #define in basicio.h to a namespace io with generic
	  read/write-functions for POD and {read,write}_string for strings.
	  Slowly moving other read/write-code into that namespace.
	- Bumped to 0.3.1
	- eix-sync hides output of emerge --sync and update-eix per default. Added
	  cli-options -v, -h, -q
	- Fixed a non-existing bug :) http://bugs.gentoo.org/show_bug.cgi?id=97462
	- Fixed a rather *extrem* bug: The read-only-what-we-need-to-check-if-the-package-matches
	  wasn't used at all! This brings an extrem speedup.
	- Fixed http://bugs.gentoo.org/show_bug.cgi?id=105935
	- I just love auto_ptr!

*eix-0.3.0

	Emil Beinroth <emilbeinroth at gmx.net>:
	- Moved explodeShit(..) into a class with static members. Changed
	  RegExClass to Regex and changed some internals. Category was merged into
	  PackageDatabase. Removed 'this->' and ; after methods.
	- After having a nice talk with Kyuu, I added
	  LOCAL_PORTAGE_CONFIG=true/false to eixrc. It's possible to tell eix to
	  ignore all local configuration like /etc/portage and ACCEPT_KEYWORDS.
	  Yes, I know that this could be done by a alias in $SHELL.
	- Fixed (think) http://bugs.gentoo.org/show_bug.cgi?id=103836. offset_type wasn't
	  off_t everywhere.

*eix-0.3.0_beta
*eix-0.2.7
